feat:some function about user
